[package]
name = "do-meow"
version = "0.2.0"
authors = ["FémLol Stúdió <femlol1femlol@gmail.com>"]
categories = ["command-line-utilities", "games"]
keywords = ["meow", "beep", "sheep", "cow", "cli"]
description = "A funny code what opens the 'Beep beep Im a sheep' video."
edition = "2021" 
homepage = "https://github.com/FemLolStudio/do-meow"
repository = "https://github.com/FemLolStudio/do-meow"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34", features = ["macros", "rt-multi-thread", "time"] }
colored = "2.0"
open = "5.0"
enable-ansi-support = "0.2"